[package]
name = "escrow402-contract"
version = "0.1.0"
edition = "2021"
description = "Escrow402 EscrowRegistry — verifiable escrow/settlement/reputation for Casper x402"
license = "MIT"

[dependencies]
odra = { version = "2.8.1", default-features = false }
odra-casper-livenet-env = { version = "2.8.1", optional = true }

# Host-only: the schema build bin calls odra_build::schema() when not targeting wasm.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-build = "2.8.1"

[features]
default = []
livenet = ["odra-casper-livenet-env"]

[dev-dependencies]
odra-test = "2.8.1"

[build-dependencies]
odra-build = "2.8.1"

[[bin]]
name = "escrow402_contract_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "escrow402_contract_build_schema"
path = "bin/build_schema.rs"
test = false

[[bin]]
name = "escrow402_on_livenet"
path = "bin/escrow402_on_livenet.rs"
required-features = ["livenet"]
test = false

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3
